# java-dependency-analyzer

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  build-report.html  build-report.json  logging.ini  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: run-tests.yml
java_dependency_analyzer/: __init__.py  cli.py
java_dependency_analyzer/cache/: __init__.py  db.py  vulnerability_cache.py
java_dependency_analyzer/models/: __init__.py  dependency.py  report.py
java_dependency_analyzer/parsers/: __init__.py  base.py  gradle_dep_tree_parser.py  gradle_parser.py  maven_dep_tree_parser.py  maven_parser.py
java_dependency_analyzer/reporters/: __init__.py  base.py  html_reporter.py  json_reporter.py
java_dependency_analyzer/resolvers/: __init__.py  transitive.py
java_dependency_analyzer/scanners/: __init__.py  base.py  ghsa_scanner.py  mvn_repository.py  osv_scanner.py
java_dependency_analyzer/util/: __init__.py  logger.py  xml_helpers.py
tests/: __init__.py  conftest.py  test_cli.py
tests/cache/: __init__.py  test_db.py  test_vulnerability_cache.py
tests/fixtures/: no_namespace_pom.xml  sample_build.gradle  sample_build.gradle.kts  sample_gradle_deps.txt  sample_maven_deps.txt  sample_pom.xml
tests/models/: __init__.py  test_dependency.py  test_report.py
tests/parsers/: __init__.py  test_gradle_dep_tree_parser.py  test_gradle_parser.py  test_maven_dep_tree_parser.py  test_maven_parser.py
tests/reporters/: __init__.py  test_html_reporter.py  test_json_reporter.py
tests/resolvers/: __init__.py  test_transitive.py
(+5 files in other folders)
