[project]
name = "java-dependency-analyzer"
version = "1.2.2"
description = "Java Dependency Analyzer is a tool that inspects dependencies."
authors = [
    {name = "Ron Webb",email = "ron@ronella.xyz"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.14"
dependencies = [
    "click (>=8.3.1,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[project.scripts]
jda = "java_dependency_analyzer.cli:main"


[tool.poetry]
packages = [{include = "java_dependency_analyzer"}]
include = ["logging.ini"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = ">=26.3.1,<27.0.0"
pylint = ">=4.0.5,<5.0.0"
pytest = ">=9.0.2,<10.0.0"
pytest-cov = ">=7.1.0,<8.0.0"
pytest-httpx = ">=0.36.0,<0.37.0"
